# 8bitCPU-HDL

./: Cargo.toml  Makefile  README.md  kernelOS.rs  main.rs
bootloader/: bootloader.asm
kernel/src/: main.rs
kernel/src/cpu/: mod.rs
